# personal-alfred

./: .codeclimate.yml  .gitignore  README.md  config.py  pyproject.toml  run
.github/workflows/: ci.yaml
infra/: acm.tf  dynamodb.tf  infracost-usage.yml  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/: dynamodb.tf  layer.tf  main.tf  messages.tf  outputs.tf  storage.tf  variables.tf  versions.tf
infra/terraform/modules/lambda/: main.tf  variables.tf
service/: app.py  db.py  models.py  serializers.py  settings.py
service/chalicelib/: api.py  bot.py  db.py  events.py  lambdas.py  models.py  protocols.py  serializers.py  settings.py
service/lambdas/: api.py  bot.py
tests/: conftest.py  test_api.py  test_bot.py  test_events.py  test_lambdas.py  test_service.py
